TheMightyDude (19 November 2012)
--------------------------------------
Fixed PHP Notice:  Undefined variable: dest_sector in emerwarp.php on line 43, referer: device.php
Fixed SQL error in planet_report_ce.php we cannot use a bind ? for the tables field name.

TheMightyDude (18 November 2012)
--------------------------------------
Fixed A Database error occurred in includes/planet_combat.php on line 487 (called from: planet.php: Unknown column 'dev_planets.planet_id' in 'where clause'
Fixed A Database error occurred in bounty.php on line 220 (called from: bounty.php: Unknown column 'amount' in 'field list'
Fixed A Database error occurred in includes/collect_bounty.php on line 55 (called from: planet.php: Table 'bnt_bounty' was not locked with LOCK TABLES

TheMightyDude (07 November 2012)
--------------------------------------
Fixed PHP Notice: Undefined variable: salv_credits in attack.php on line 768
Fixed PHP Notice: Use of undefined constant character_name - assumed 'character_name' in attack.php on line 775
Fixed PHP Notice: Undefined index: l_killheadline in includes/db_kill_player.php on line 87
Fixed PHP Notice: Undefined index: l_news_killed in includes/db_kill_player.php on line 89
Fixed PHP Notice: Undefined variable: l_planet2_sector in planet2.php on line 185

TheMightyDude (04 November 2012)
--------------------------------------
Fixed bug in news.php where the news articles would increase the further the date you went back.

TheMightyDude (02 November 2012)
--------------------------------------
Fixed a few errors in faq.php as well as some cleanup.

TheMightyDude (01 November 2012)
--------------------------------------
Fixed bug in new2.php when setting up the players zone.
Added Number formatting to the Maxed Credit Cap on the settings page.

TheMightyDude (27 October 2012)
--------------------------------------
Fixed error in warpedit2.php which displayed Target sector ([target_sector]) already has a link from this sector.
