@@ -71,9 +71,59 @@ function check_login ($db, $lang, $langvars, $stop_die = true)
                     $_SESSION['last_activity'] = $timestamp['now']; // Reset the last activity time on the session so that the session renews - this is the replacement for the (now removed) update_cookie function.
                 }
 
+                $banned = 0;
+
+                // Check to see if the player is banned every 60 seconds (may need to ajust this).
+                if($timestamp['now'] >= ($timestamp['last'] +60))
+                {
+                    include './includes/check_ban.php';
+
+                    $ban_result = check_ban($db, $lang, null, $playerinfo);
+                    if ($ban_result === false ||  (array_key_exists('ban_type', $ban_result) && $ban_result['ban_type'] === ID_WATCH))
+                    {
+                        // do nothing
+                    }
+                    else
+                    {
+                        // Set login status to false, then clear the session array, and finally clear the session cookie
+                        $_SESSION['logged_in'] = false;
+                        $_SESSION = array ();
+                        setcookie ("PHPSESSID", "", 0, "/");
+
+                        // Destroy the session entirely
+                        session_destroy ();
+
+                        include './header.php';
+                        echo "<div style='font-size:18px; color:#FF0000;'>\n";
+                        if ( array_key_exists('ban_type', $ban_result) && $ban_result['ban_type'] == ID_LOCKED )
+                        {
+                            echo "Your account has been Locked";
+                        }
+                        else
+                        {
+                            echo "Your account has been Banned";
+                        }
+
+                        if ( array_key_exists('public_info', $ban_result) && strlen(trim($ban_result['public_info'])) >0 )
+                        {
+                            echo " for the following:<br>\n";
+                            echo "<br>\n";
+                            echo "<div style='font-size:16px; color:#FFFF00;'>{$ban_result['public_info']}</div>\n";
+                        }
+                        echo "</div>\n";
+                        echo "<br>\n";
+                        echo "<div style='color:#FF0000;'>Maybe you will behave yourself next time.</div>\n";
+                        echo "<br />\n";
+                        echo str_replace("[here]", "<a href='index.php'>" . $langvars['l_here'] . "</a>", $langvars['l_global_mlogin']);
+                        $flag = 1;
+                        include './footer.php';
+                        $banned = 1;
+                    }
+
+                }
 
                 // Check for destroyed ship
-                if ($playerinfo['ship_destroyed'] == "Y")
+                if ($playerinfo['ship_destroyed'] == "Y" && $banned == 0)
                 {
                     // if the player has an escapepod, set the player up with a new ship
                     if ($playerinfo['dev_escapepod'] == "Y")
