@@ -87,64 +87,95 @@ if ($playerfound)
 
     if ($hasher->CheckPassword ($_POST['pass'], $playerinfo['password']))
     {
-        if ($playerinfo['ship_destroyed'] == "N")
-        {
-            // player's ship has not been destroyed
-            player_log ($db, $playerinfo['ship_id'], LOG_LOGIN, $ip);
-            $stamp = date("Y-m-d H-i-s");
-            $update = $db->Execute("UPDATE {$db->prefix}ships SET last_login = ?, ip_address = ? WHERE ship_id = ?;", array ($stamp, $ip, $playerinfo['ship_id']));
-            db_op_result ($db, $update, __LINE__, __FILE__);
+        include './includes/check_ban.php';
 
-            // They have logged in successfully, so update their session ID as well
-            adodb_session_regenerate_id();
-
-            $_SESSION['logged_in'] = true;
-            $_SESSION['password'] = $_POST['pass'];
-            $_SESSION['username'] = $playerinfo['email'];
-            TEXT_GOTOMAIN();
-            header("Location: main.php"); // This redirect avoids any rendering for the user of login2. Its a direct transition, visually
-        }
-        else
+        $ban_result = check_ban($db, $lang, null, $playerinfo);
+        if ($ban_result === false ||  (array_key_exists('ban_type', $ban_result) && $ban_result['ban_type'] === ID_WATCH))
         {
-            // player's ship has been destroyed
-            if ($playerinfo['dev_escapepod'] == "Y")
+
+            if ($playerinfo['ship_destroyed'] == "N")
             {
-                $resx = $db->Execute("UPDATE {$db->prefix}ships SET hull=0, engines=0, power=0, computer=0, sensors=0, beams=0, torp_launchers=0, torps=0, armor=0, armor_pts=100, cloak=0, shields=0, sector=0, ship_ore=0, ship_organics=0, ship_energy=1000, ship_colonists=0, ship_goods=0, ship_fighters=100, ship_damage=0, on_planet='N', dev_warpedit=0, dev_genesis=0, dev_beacon=0, dev_emerwarp=0, dev_escapepod='N', dev_fuelscoop='N', dev_minedeflector=0, ship_destroyed='N', dev_lssd='N' WHERE ship_id = ?", array ($playerinfo['ship_id']));
-                db_op_result ($db, $resx, __LINE__, __FILE__);
-                $l_login_died = str_replace("[here]", "<a href='main.php'>" . $l_here . "</a>", $l_login_died);
-                echo $l_login_died;
+                // player's ship has not been destroyed
+                player_log ($db, $playerinfo['ship_id'], LOG_LOGIN, $ip);
+                $stamp = date("Y-m-d H-i-s");
+                $update = $db->Execute("UPDATE {$db->prefix}ships SET last_login = ?, ip_address = ? WHERE ship_id = ?;", array ($stamp, $ip, $playerinfo['ship_id']));
+                db_op_result ($db, $update, __LINE__, __FILE__);
+    
+                // They have logged in successfully, so update their session ID as well
+                adodb_session_regenerate_id();
+    
+                $_SESSION['logged_in'] = true;
+                $_SESSION['password'] = $_POST['pass'];
+                $_SESSION['username'] = $playerinfo['email'];
+                TEXT_GOTOMAIN();
+                header("Location: main.php"); // This redirect avoids any rendering for the user of login2. Its a direct transition, visually
             }
             else
             {
-                echo "You have died in a horrible incident, <a href=log.php>here</a> is the blackbox information that was retrieved from your ships wreckage.<br><br>";
-
-                // Check if $newbie_nice is set, if so, verify ship limits
-                if ($newbie_nice == "YES")
+                // player's ship has been destroyed
+                if ($playerinfo['dev_escapepod'] == "Y")
                 {
-                    $newbie_info = $db->Execute("SELECT hull, engines, power, computer, sensors, armor, shields, beams, torp_launchers, cloak FROM {$db->prefix}ships WHERE ship_id = ? AND hull <= ? AND engines <= ? AND power <= ? AND computer <= ? AND sensors <= ? AND armor <= ? AND shields <= ? AND beams <= ? AND torp_launchers <= ? AND cloak <= ?;", array ($playerinfo['ship_id'], $newbie_hull, $newbie_engines, $newbie_power, $newbie_computer, $newbie_sensors, $newbie_armor, $newbie_shields, $newbie_beams, $newbie_torp_launchers, $newbie_cloak));
-                    db_op_result ($db, $newbie_info, __LINE__, __FILE__);
-                    $num_rows = $newbie_info->RecordCount();
-
-                    if ($num_rows)
+                    $resx = $db->Execute("UPDATE {$db->prefix}ships SET hull=0, engines=0, power=0, computer=0, sensors=0, beams=0, torp_launchers=0, torps=0, armor=0, armor_pts=100, cloak=0, shields=0, sector=0, ship_ore=0, ship_organics=0, ship_energy=1000, ship_colonists=0, ship_goods=0, ship_fighters=100, ship_damage=0, on_planet='N', dev_warpedit=0, dev_genesis=0, dev_beacon=0, dev_emerwarp=0, dev_escapepod='N', dev_fuelscoop='N', dev_minedeflector=0, ship_destroyed='N', dev_lssd='N' WHERE ship_id = ?", array ($playerinfo['ship_id']));
+                    db_op_result ($db, $resx, __LINE__, __FILE__);
+                    $l_login_died = str_replace("[here]", "<a href='main.php'>" . $l_here . "</a>", $l_login_died);
+                    echo $l_login_died;
+                }
+                else
+                {
+                    echo "You have died in a horrible incident, <a href=log.php>here</a> is the blackbox information that was retrieved from your ships wreckage.<br><br>";
+    
+                    // Check if $newbie_nice is set, if so, verify ship limits
+                    if ($newbie_nice == "YES")
                     {
-                        echo "<br><br>" . $l_login_newbie . "<br><br>";
-                        $resx = $db->Execute("UPDATE {$db->prefix}ships SET hull=0, engines=0, power=0, computer=0, sensors=0, beams=0, torp_launchers=0, torps=0, armor=0, armor_pts=100, cloak=0, shields=0, sector=0, ship_ore=0, ship_organics=0, ship_energy=1000, ship_colonists=0, ship_goods=0, ship_fighters=100, ship_damage=0, credits=1000, on_planet='N', dev_warpedit=0, dev_genesis=0, dev_beacon=0, dev_emerwarp=0, dev_escapepod='N', dev_fuelscoop='N', dev_minedeflector=0, ship_destroyed='N', dev_lssd='N' WHERE ship_id = ?", array ($playerinfo['ship_id']));
-                        db_op_result ($db, $resx, __LINE__, __FILE__);
-
-                        $l_login_newlife = str_replace("[here]", "<a href='main.php'>" . $l_here . "</a>", $l_login_newlife);
-                        echo $l_login_newlife;
-                    }
+                        $newbie_info = $db->Execute("SELECT hull, engines, power, computer, sensors, armor, shields, beams, torp_launchers, cloak FROM {$db->prefix}ships WHERE ship_id = ? AND hull <= ? AND engines <= ? AND power <= ? AND computer <= ? AND sensors <= ? AND armor <= ? AND shields <= ? AND beams <= ? AND torp_launchers <= ? AND cloak <= ?;", array ($playerinfo['ship_id'], $newbie_hull, $newbie_engines, $newbie_power, $newbie_computer, $newbie_sensors, $newbie_armor, $newbie_shields, $newbie_beams, $newbie_torp_launchers, $newbie_cloak));
+                        db_op_result ($db, $newbie_info, __LINE__, __FILE__);
+                        $num_rows = $newbie_info->RecordCount();
+    
+                        if ($num_rows)
+                        {
+                            echo "<br><br>" . $l_login_newbie . "<br><br>";
+                            $resx = $db->Execute("UPDATE {$db->prefix}ships SET hull=0, engines=0, power=0, computer=0, sensors=0, beams=0, torp_launchers=0, torps=0, armor=0, armor_pts=100, cloak=0, shields=0, sector=0, ship_ore=0, ship_organics=0, ship_energy=1000, ship_colonists=0, ship_goods=0, ship_fighters=100, ship_damage=0, credits=1000, on_planet='N', dev_warpedit=0, dev_genesis=0, dev_beacon=0, dev_emerwarp=0, dev_escapepod='N', dev_fuelscoop='N', dev_minedeflector=0, ship_destroyed='N', dev_lssd='N' WHERE ship_id = ?", array ($playerinfo['ship_id']));
+                            db_op_result ($db, $resx, __LINE__, __FILE__);
+    
+                            $l_login_newlife = str_replace("[here]", "<a href='main.php'>" . $l_here . "</a>", $l_login_newlife);
+                            echo $l_login_newlife;
+                        }
+                        else
+                        {
+                            echo "<br><br>" . $l_login_looser . "<br><br>" . $l_login_looser2;
+                        }
+    
+                    } // End if $newbie_nice
                     else
                     {
                         echo "<br><br>" . $l_login_looser . "<br><br>" . $l_login_looser2;
                     }
-
-                } // End if $newbie_nice
-                else
-                {
-                    echo "<br><br>" . $l_login_looser . "<br><br>" . $l_login_looser2;
                 }
             }
+        }
+        else
+        {
+            echo "<div style='font-size:18px; color:#FF0000;'>\n";
+            if ( array_key_exists('ban_type', $ban_result) && $ban_result['ban_type'] == ID_LOCKED )
+            {
+                echo "Your account has been Locked";
+            }
+            else
+            {
+                echo "Your account has been Banned";
+            }
+
+            if ( array_key_exists('public_info', $ban_result) && strlen(trim($ban_result['public_info'])) >0 )
+            {
+                echo " for the following:<br>\n";
+                echo "<br>\n";
+                echo "<div style='font-size:16px; color:#FFFF00;'>{$ban_result['public_info']}</div>\n";
+            }
+            echo "</div>\n";
+            echo "<br>\n";
+            echo "<div style='color:#FF0000;'>Maybe you will behave yourself next time.</div>\n";
+            echo "<br />\n";
+            echo str_replace("[here]", "<a href='index.php'>" . $langvars['l_here'] . "</a>", $langvars['l_global_mlogin']);
         }
     }
     else
